--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
-baseURL = 'http://example.org/'
+baseURL = '/'
 languageCode = 'en-us'
 title = 'Empirical reporting'
+theme = "myflatly"
 
 
 relativeURLs = true
