--- a/config.toml
+++ b/config.toml
@@ -4,20 +4,50 @@ title = 'Empirical reporting'
 theme = "myflatly"
 
 
-relativeURLs = true
+relativeURLs = false
 description = "Website for the data reporting class at the Cronkite School for investigative reporting masters' students, Spring 2022"
 # publishDir = "docs"
 
 [menu]
+
   [[menu.main]]
-    identifier = "about"
-    name = "About"
-    url = "/about/"
+     name = "Syllabus"
+     url = "/syllabus.html/"
+
+
+  [[menu.main]]
+    identifier = "schedule"
+    name = "Schedule"
+    url = "/schedule.html"
+
+
+   [[menu.main]]
+    identifier = "weeks"
+    name = "Week details"
+    url = "#"
+    isParent = true
+    hasChildren = true
+
+
+
 
    [[menu.main]]
     identifier = "posts"
     name = "Posts"
     url = "/posts/"
+
+
+   [[menu.main]]
+    identifier = "posts"
+    name = "Posts"
+    url = "/posts/"
+
+
+  [[menu.main]]
+    identifier = "about"
+    name = "About"
+    url = "/about/"
+
 
 [markup]
   [markup.goldmark]
