--- a/themes/myflatly/theme.toml
+++ b/themes/myflatly/theme.toml
@@ -3,7 +3,7 @@
 
 name = "Myflatly"
 license = "MIT"
-licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
+licenselink = ""
 description = ""
 homepage = "http://example.com/"
 tags = []
