--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
-baseURL = '/'
+#baseURL="/"
+baseURL = 'https://cronkitedata.github.io/dataj'
 languageCode = 'en-us'
 title = 'Empirical reporting'
 theme = "myflatly"
@@ -6,6 +7,9 @@ theme = "myflatly"
 relativeURLs = false
 description = "Website for the data reporting class at the Cronkite School for investigative reporting masters' students, Spring 2022"
 publishDir = "docs"
+
+#NOTE: Need to have baseurl without the / at the end and relativeURLs false. 
+# then if you want to see it locally, go to localhost:1313/dataj/ and the links appear to work. 
 
 
 
