Add week of Feb 7
Update announcement on attendance

feb 7

Added Week 5

Fix Week 5

Fix Week 5again

Prelim week 6

Replication update

Feb 28

--- a/config.toml
+++ b/config.toml
@@ -59,6 +59,22 @@ publishDir = "docs"
     weight =  2
     parent =  "projects"
 
+[[menu.main]]
+    identifier = "explainer"
+    name = "Explainer"
+    url = "/coursedocs/explainer/"
+    weight =  4
+    parent =  "projects"
+
+
+[[menu.main]]
+    identifier = "builddb"
+    name = "Build Your Own Database"
+    url = "/coursedocs/builddb/"
+    weight =  3
+    parent =  "projects"
+
+
 
 [markup]
   [markup.goldmark]
